--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,11 @@
 # main links links
 main:
-  - title: "About Me"
-    url: https://www.google.com/
+  - title: "About"
+    url: http://www.google.com
 
   - title: "Blog"
     url: /
+
+  - title: "Minimal Mistakes Theme"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/navigation/
+
