--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,19 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+
 # SEO Related
 google_site_verification :
 bing_site_verification   :
