--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ analytics:
 author:
   name             : "Ting Neo"
   avatar           : "https://avatars0.githubusercontent.com/u/18187065?v=3&s=466"
-  bio              : "Data scientist, actuary, explorer"
+  bio              : "Data scientist, actuary, explorer of worlds"
   location         : "New York, NY"
   email            : "neo.kaiting@gmail.com"
   uri              :
