--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,12 @@ defaults:
       comments: true
       share: true
       related: true
-
+  - scope:
+        path: ""
+        type: pages
+      values:
+        layout: single
+        author_profile: true
 # SEO Related
 google_site_verification :
 bing_site_verification   :
