--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Blog"
     url: /
 
-  - title: "Resume"
-    url: /
+ # - title: "Resume"
+ #   url: /
 
  # - title: "Minimal Mistakes Theme"
  #   url: https://mmistakes.github.io/minimal-mistakes/docs/navigation/
