--- a/_config.yml
+++ b/_config.yml
@@ -102,12 +102,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/neokt"
+  github           : "neokt"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/kai-ting-neo"
+  linkedin         : "kai-ting-neo"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
