--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       comments: true
       share: true
       related: true
