Updating third post

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "ne0kt"
 facebook:
   username               :
   app_id                 :
