--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : "ne0kt"
+  username               : 
 facebook:
   username               :
   app_id                 :
@@ -92,7 +92,7 @@ analytics:
 author:
   name             : "Ting Neo"
   avatar           : "https://avatars0.githubusercontent.com/u/18187065?v=3&s=466"
-  bio              : "Data scientist, actuary, explorer of worlds"
+  bio              : "Data scientist, actuary, world explorer"
   location         : "New York, NY"
   email            : "neo.kaiting@gmail.com"
   uri              :
@@ -113,7 +113,7 @@ author:
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : "ne0kt"
   vine             :
   weibo            :
   xing             :
