--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : 
+  username               :
 facebook:
   username               :
   app_id                 :
@@ -92,7 +92,7 @@ analytics:
 author:
   name             : "Ting Neo"
   avatar           : "https://avatars0.githubusercontent.com/u/18187065?v=3&s=466"
-  bio              : "Data scientist, actuary, world explorer"
+  bio              : "Data scientist, world explorer"
   location         : "New York, NY"
   email            : "neo.kaiting@gmail.com"
   uri              :
@@ -107,7 +107,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "kai-ting-neo"
+  linkedin         : "ting-neo"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
